# search-engine

./: AVLTree.h  CMakeLists.txt  DocumentParser.cpp  DocumentParser.h  FileHandler.cpp  FileHandler.h  HashTable.h  IndexEntry.cpp  IndexEntry.h  IndexHandler.cpp  IndexHandler.h  QueryEngine.cpp  QueryEngine.h  README.md  Tree.h  main.cpp
Doxygen Documentation/html/: _document_parser_8cpp.html  _document_parser_8cpp__incl.map  _document_parser_8cpp__incl.md5  _document_parser_8h.html  _document_parser_8h__dep__incl.map  _document_parser_8h__dep__incl.md5  _document_parser_8h__incl.map  _document_parser_8h__incl.md5  _document_parser_8h_source.html  _file_handler_8cpp.html  _file_handler_8cpp__incl.map  _file_handler_8cpp__incl.md5  _file_handler_8h.html  _file_handler_8h__dep__incl.map  _file_handler_8h__dep__incl.md5  _file_handler_8h__incl.map  _file_handler_8h__incl.md5  _file_handler_8h_source.html  _hash_table_8h.html  _hash_table_8h__dep__incl.map  _hash_table_8h__dep__incl.md5  _hash_table_8h__incl.map  _hash_table_8h__incl.md5  _hash_table_8h_source.html  _index_entry_8cpp.html  _index_entry_8cpp__incl.map  _index_entry_8cpp__incl.md5  _index_entry_8h.html  _index_entry_8h__dep__incl.map  _index_entry_8h__dep__incl.md5  _index_entry_8h__incl.map  _index_entry_8h__incl.md5  _index_entry_8h_source.html  _index_handler_8cpp.html  _index_handler_8cpp.js  _index_handler_8cpp__incl.map  _index_handler_8cpp__incl.md5  _index_handler_8h.html  _index_handler_8h__dep__incl.map  (+341 more)
src/: DocumentParser.cpp  DocumentParser.h  FileHandler.h  IndexHandler.cpp  main.cpp
(+44 files in other folders)
